[project]
name = "precious"
version = "0.1.0"
description = "analysis for PRECIOUS secondary analysis of treatment restrictions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.20.0",
    "funsor>=0.4.5",
    "jupyter>=1.1.1",
    "numpyro>=0.15.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]
